# Py-Upper-Atm

./: .gitattributes  .gitignore  AGENTS.md  CMakeLists.txt  CMakePresets.json  DEVELOP_GUIDE.md  README.md  README_en.md  README_zh.md  ROADMAP.md  ROADMAP_zh.md  msis2.0.parm  pyproject.toml  quick_run.py  requirements-dev.txt  requirements.txt  run_msis_from_csv.py  test_hwm14.py  test_msis00.py  test_msis20.py  使用方法.md
.github/workflows/: release.yml
aidocs/: 20260107-ROADMAP.md
cmake/: UpperAtmPyNative.cmake
docs/: QUICK_START.md
example/: grid_hwm.py  grid_msis.py  run_msis_from_csv.py  test_aurora.py  test_hwm14.py  test_hwm93.py  test_msis00.py  test_msis20.py
model/: __init__.py  cache.py  parallel.py  space_weather.py  temp_density_model.py  wind_model.py  xarray_output.py
model/pyhwm14/: __init__.py  compile.ps1  compile.sh  test.py
model/pyhwm93/: __init__.py  compile.ps1  compile.sh
model/pymsis00/: __init__.py  compile.ps1  compile.sh  msis00_cshim.F90
model/pymsis2/: __init__.py  compile.ps1  compile.sh  msis_init.F90  test.py
src/model/: __init__.py
src/model/pyaurora/: CMakeLists.txt  README.md  README_zh.md  __init__.py  oval.for  oval_cshim.F90
src/model/pyhwm14/: CMakeLists.txt  README.md  README_zh.md  __init__.py  hwm14.f90  hwm_cshim.F90
src/model/pyhwm93/: CMakeLists.txt  README.md  README_zh.md  __init__.py  hwm93.f  hwm93_cshim.F90  hwm93dirver.f
src/model/pymsis00/: CMakeLists.txt  README.md  README_zh.md  __init__.py  compile.ps1
src/model/pymsis2/: CMakeLists.txt  README.md  README_zh.md  __init__.py  compile.ps1  compile.sh  msis_constants.F90  msis_cshim.F90  msis_init.F90  test.py
src/utils/: __init__.py  cache.py  dll_loader.py  model_data.py  model_data_manifest.json  netcdf2csv.py  space_weather.py  time.py  xarray_output.py
tests/: conftest.py  test_aurora.py  test_temp_density.py  test_utils.py  test_wind.py
