[project]
name = "upperatmpy"
version = "0.1.0"
description = "Python wrapper for upper atmospheric models (NRLMSIS-2.0, NRLMSISE-00, HWM14, HWM93)"
readme = "README.md"
license = {text = "Placeholder"}
requires-python = ">=3.8"
keywords = ["atmospheric", "msis", "hwm", "space-weather", "ionosphere", "thermosphere"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Operating System :: Microsoft :: Windows",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Atmospheric Science",
]

dependencies = [
    "numpy>=1.20.0",
]

[project.optional-dependencies]
full = [
    "pandas>=1.3.0",
    "xarray>=0.19.0",
    "tqdm>=4.60.0",
]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["model*", "utils*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "requires_dll: marks tests that require compiled DLLs",
]
